--- a/ClientApp/src/custom.css
+++ b/ClientApp/src/custom.css
@@ -12,3 +12,9 @@ code {
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
+
+.div-right{
+    margin-top:40px;
+    float: right;
+    padding-bottom: 10px;
+}
